--- a/views/loginpage.pug
+++ b/views/loginpage.pug
@@ -9,3 +9,5 @@ block content
       label(for="password") Password
       input(type="password", name="pw")
     input(type="submit", value="submit")
+
+  a(href="/users/joinpage") 회원가입
