--- a/views/joinpage.pug
+++ b/views/joinpage.pug
@@ -9,6 +9,9 @@ block content
       label(for="password") Password
       input(type="password", name="pw")
     div
+      label Confirm Password
+      input(type="password", name="pwconfirm")
+    div
       label(for="age") age
       input(type="number", name="age")
     div
