정보수정 끝~

--- a/views/update.pug
+++ b/views/update.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  form(action="/profile/update", method="post")
+  form(action="/users/update", method="post")
     div
       label(for="age") 나이
       input(type="number", name="age")
