--- a/views/loginpage.pug
+++ b/views/loginpage.pug
@@ -1,13 +1,14 @@
 extends layout
 
 block content
-  form(action="/users/login", method="post")
-    div
-      label(for="id") ID
-      input(type="text", name="id")
-    div
-      label(for="password") Password
-      input(type="password", name="pw")
-    input(type="submit", value="submit")
-
-  a(href="/users/joinpage") 회원가입
+  form(action="/users/login", method="post", class="modal-content")
+    div(class="container")
+      label(for="id")
+        b ID
+      input(type="text", name="id", placeholder="Enter UserID")
+      label(for="password")
+        b Password
+      input(type="password", name="pw", placeholder="Enter Password")
+      button(type="submit") Login
+  a(href="/users/joinpage")
+    button 회원가입
