--- a/views/index.pug
+++ b/views/index.pug
@@ -7,8 +7,8 @@ block content
       Android.showToast("#{user.id}", "#{user.age}", "#{user.weight}");
     }
     sendData();
-  a(href="/users/logout") 로그아웃
-  br
+  a(href="/users/logout")
+    button 로그아웃
   button(onclick="sendData()") 미세먼지 보기
-  br
-  a(href="/users/update") 정보수정
+  a(href="/users/update")
+    button 정보수정
