--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,7 +4,7 @@ html
     style(type="text/css").
       body {font-family: Arial, Helvetica, sans-serif;}
       /* Full-width input fields */
-      input[type=text], input[type=password] {
+      input[type=text], input[type=password], input[type=number] {
         width: 100%;
         padding: 12px 20px;
         margin: 8px 0;
