--- a/views/update.pug
+++ b/views/update.pug
@@ -1,11 +1,12 @@
 extends layout
 
 block content
-  form(action="/users/update", method="post")
-    div
-      label(for="age") 나이
-      input(type="number", name="age")
-    div
-      label(for="weight") 몸무게
-      input(type="number", name="weight")
-    input(type="submit", value="submit")
+  form(action="/users/update", method="post", class="modal-content")
+    div(class="container")
+      label(for="age")
+        b 나이
+      input(type="number", name="age", placeholder="Enter your age")
+      label(for="weight")
+        b 몸무게
+      input(type="number", name="weight", placeholder="Enter your weight")
+      button(type="submit") 수정
